# mira

./: .gitignore  Cargo.toml  Dockerfile.rust  Makefile  README.md  build.rs  docker-compose.yml  env.example  pixi.toml
.github/workflows/: ci.yml
docs/: DEPLOYMENT.md  NYRA_PROFILE.md  PROJECT_ARCHITECTURE.md  PROJECT_OVERVIEW.md  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  README.md
examples/: apple_silicon_bench.rs  interactive.rs  main.rs  rust_implementation_bench.rs
monitoring/: alert_rules.yml  prometheus.yml
python_service/: Dockerfile  main.py  requirements.txt
python_service/tests/: test_inference.py
scripts/: cleanup.sh  setup.sh  validate-docker.sh
src/: lib.rs
src/bridge/: mod.rs  python_bridge.rs  zig_bridge.rs
src/emotion/: emotional_engine.rs  mod.rs  personality.rs
src/memory/: core.rs  mod.rs
src/vector_store/: mock_impl.rs  mod.rs  qdrant_impl.rs
zig_system/: build.zig
zig_system/.zig-cache/o/531455e2e93d49c42c8666a49bfb05ad/: mira_bench
zig_system/.zig-cache/o/6d402f2599fc19cc57621c4203e07855/: zig_system_bench
zig_system/.zig-cache/o/6ee4729442f47c527f43033397fe6996/: mira_bench
zig_system/bench/: memory_bench.zig
zig_system/docs/: ARCHITECTURE_ALTERNATIVES_2025.md  ARCHITECTURE_DESIGN_2025.md  GAP_ANALYSIS_2025.md  IMPROVEMENT_SUMMARY.md  PERFORMANCE_OPTIMIZATION_2025.md  README.md  ROBOTIC_DEPLOYMENT_2025.md  RUST_TECHNOLOGY_EVALUATION_2025.md  TECHNICAL_ROADMAP_2025.md  TECHNOLOGY_RESEARCH_2025.md
zig_system/src/: benchmark.zig  main.zig  memory.zig  monitor.zig  root.zig  simple_bench.zig  test.zig  vector.zig
zig_system/tests/: integration_test.zig
